<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.projects.ricardo.infosoc.Nivel"
    tools:showIn="@layout/app_bar_nivel">

    <TextView android:text="@string/nombre_usuario" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="446dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:id="@+id/NombreUsuario" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/NombreUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp"
        android:id="@+id/Nivel">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/nivel"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:id="@+id/textView2"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/Nivel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cnt_viajes">

        <TextView
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:text="@string/cantidad_viajes"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cnt_viajes"
            android:id="@+id/textView4"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/cnt_viajes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tiempo_viaje">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/tiempo_viaje"
            android:id="@+id/textView5"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tmp_viaje"
            android:id="@+id/textView6"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tiempo_viaje"
        android:layout_centerHorizontal="true"
        android:id="@+id/pts_sgt_nvl">

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/pts_sgt_nivel"
            android:id="@+id/textView7"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pts_sgt_nvl"
            android:id="@+id/textView8"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/pts_sgt_nvl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/premio_sgt_nvl"
            android:id="@+id/textView9"
            android:textSize="20sp" />

        <ImageView
            android:layout_marginTop="10dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:background="@mipmap/movietickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
