<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/white"
    tools:context="com.projects.ricardo.infosoc.About"
    tools:showIn="@layout/app_bar_about">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp">

            <ImageView
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:id="@+id/imageView3"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/logo"
                android:layout_weight="0" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:id="@+id/textView10"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:textSize="18dp" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desarrolladores"
                android:id="@+id/textView11"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombres_desarrolladores"
                android:id="@+id/textView12"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:textSize="18dp" />

            <TextView
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curso"
                android:id="@+id/textView13"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/universidad"
                android:id="@+id/textView14"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anno"
                android:id="@+id/textView15"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
